[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/Menus/DrillSelect.gd" id="1"]

[node name="DrillSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.035294, 0.066667, 0.101961, 1.0)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
custom_minimum_size = Vector2(400, 0)

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
text = "Select Drill"
horizontal_alignment = 1

[node name="DrillList" type="ItemList" parent="MarginContainer/VBoxContainer"]
size_flags_vertical = 3
item_count = 0

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
alignment = 1

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
text = "Back"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/DrillList" to="DrillSelect" method="_on_drill_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Back" to="DrillSelect" method="_on_back_pressed"]
